# swagger/specification/applications/resource-manager/Applications.Core/preview/2023-10-01-preview/openapi.json
@@ -3639,6 +3639,26 @@
         }
       }
     },
+    "EnvironmentVariables": {
+      "type": "object",
+      "description": "EnvironmentVariables describes structure enabling environment variables to be set.",
+      "properties": {
+        "secrets": {
+          "type": "object",
+          "description": "The provider secrets passed as environment variables.",
+          "additionalProperties": {
+            "$ref": "#/definitions/ProviderSecret"
+          }
+        }
+      },
+      "additionalProperties": true,
+      "allOf": [
+        {
+          "type": "object",
+          "additionalProperties": true
+        }
+      ]
+    },
     "EphemeralVolume": {
       "type": "object",
       "description": "Specifies an ephemeral volume for a container",
@@ -4039,7 +4059,7 @@
       "properties": {
         "pat": {
           "type": "object",
-          "description": "Personal Access Token (PAT) configuration used to authenticate to Git platforms.",
+          "description": "Personal Access Token (PAT) configuration used to authenticate to Git platforms..",
           "additionalProperties": {
             "$ref": "#/definitions/SecretConfig"
           }
@@ -4620,27 +4640,65 @@
         ]
       }
     },
+    "ProviderConfigProperties": {
+      "type": "object",
+      "description": "ProviderConfigProperties specifies provider configuration details needed for recipes.",
+      "properties": {
+        "secrets": {
+          "type": "object",
+          "description": "The secrets for the referenced provider resource.",
+          "additionalProperties": {
+            "$ref": "#/definitions/ProviderSecret"
+          }
+        }
+      },
+      "additionalProperties": true,
+      "allOf": [
+        {
+          "type": "object",
+          "additionalProperties": true
+        }
+      ]
+    },
+    "ProviderSecret": {
+      "type": "object",
+      "description": "Specifies the secret details for the provider.",
+      "properties": {
+        "source": {
+          "type": "string",
+          "description": "The resource id for the secret store containing credentials."
+        },
+        "key": {
+          "type": "string",
+          "description": "The key for the secret in the secret store."
+        }
+      },
+      "required": [
+        "source",
+        "key"
+      ]
+    },
     "Providers": {
       "type": "object",
-      "description": "The Cloud providers configuration",
+      "description": "The Cloud providers configuration.",
       "properties": {
         "azure": {
           "$ref": "#/definitions/ProvidersAzure",
-          "description": "The Azure cloud provider configuration"
+          "description": "The Azure cloud provider configuration."
         },
         "aws": {
           "$ref": "#/definitions/ProvidersAws",
-          "description": "The AWS cloud provider configuration"
+          "description": "The AWS cloud provider configuration."
         }
       }
     },
     "ProvidersAws": {
       "type": "object",
-      "description": "The AWS cloud provider definition",
+      "description": "The AWS cloud provider definition.",
       "properties": {
         "scope": {
           "type": "string",
-          "description": "Target scope for AWS resources to be deployed into.  For example: '/planes/aws/aws/accounts/000000000000/regions/us-west-2'"
+          "description": "Target scope for AWS resources to be deployed into.  For example: '/planes/aws/aws/accounts/000000000000/regions/us-west-2'."
         }
       },
       "required": [
@@ -4649,21 +4707,21 @@
     },
     "ProvidersAwsUpdate": {
       "type": "object",
-      "description": "The AWS cloud provider definition",
+      "description": "The AWS cloud provider definition.",
       "properties": {
         "scope": {
           "type": "string",
-          "description": "Target scope for AWS resources to be deployed into.  For example: '/planes/aws/aws/accounts/000000000000/regions/us-west-2'"
+          "description": "Target scope for AWS resources to be deployed into.  For example: '/planes/aws/aws/accounts/000000000000/regions/us-west-2'."
         }
       }
     },
     "ProvidersAzure": {
       "type": "object",
-      "description": "The Azure cloud provider definition",
+      "description": "The Azure cloud provider definition.",
       "properties": {
         "scope": {
           "type": "string",
-          "description": "Target scope for Azure resources to be deployed into.  For example: '/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testGroup'"
+          "description": "Target scope for Azure resources to be deployed into.  For example: '/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testGroup'."
         }
       },
       "required": [
@@ -4672,25 +4730,25 @@
     },
     "ProvidersAzureUpdate": {
       "type": "object",
-      "description": "The Azure cloud provider definition",
+      "description": "The Azure cloud provider definition.",
       "properties": {
         "scope": {
           "type": "string",
-          "description": "Target scope for Azure resources to be deployed into.  For example: '/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testGroup'"
+          "description": "Target scope for Azure resources to be deployed into.  For example: '/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testGroup'."
         }
       }
     },
     "ProvidersUpdate": {
       "type": "object",
-      "description": "The Cloud providers configuration",
+      "description": "The Cloud providers configuration.",
       "properties": {
         "azure": {
           "$ref": "#/definitions/ProvidersAzureUpdate",
-          "description": "The Azure cloud provider configuration"
+          "description": "The Azure cloud provider configuration."
         },
         "aws": {
           "$ref": "#/definitions/ProvidersAwsUpdate",
-          "description": "The AWS cloud provider configuration"
+          "description": "The AWS cloud provider configuration."
         }
       }
     },
@@ -4773,7 +4831,11 @@
       "properties": {
         "terraform": {
           "$ref": "#/definitions/TerraformConfigProperties",
-          "description": "Specifies the terraform config properties"
+          "description": "Specifies the Terraform config properties."
+        },
+        "env": {
+          "$ref": "#/definitions/EnvironmentVariables",
+          "description": "Specifies the environment variables needed for the recipes."
         }
       }
     },
@@ -4783,11 +4845,11 @@
       "properties": {
         "resourceType": {
           "type": "string",
-          "description": "Type of the resource this recipe can be consumed by. For example: 'Applications.Datastores/mongoDatabases'"
+          "description": "Type of the resource this recipe can be consumed by. For example: 'Applications.Datastores/mongoDatabases'."
         },
         "name": {
           "type": "string",
-          "description": "The name of the recipe registered to the environment"
+          "description": "The name of the recipe registered to the environment."
         }
       },
       "required": [
@@ -4841,7 +4903,7 @@
         },
         "parameters": {
           "type": "object",
-          "description": "Key/value parameters to pass to the recipe template at deployment",
+          "description": "Key/value parameters to pass to the recipe template at deployment.",
           "properties": {}
         }
       },
@@ -4865,7 +4927,7 @@
         },
         "parameters": {
           "type": "object",
-          "description": "Key/value parameters to pass to the recipe template at deployment",
+          "description": "Key/value parameters to pass to the recipe template at deployment.",
           "properties": {}
         }
       },
@@ -5299,6 +5361,17 @@
         "authentication": {
           "$ref": "#/definitions/AuthConfig",
           "description": "Authentication information used to access private Terraform module sources. Supported module sources: Git."
+        },
+        "providers": {
+          "type": "object",
+          "description": "Specifies the details of Terraform providers.",
+          "additionalProperties": {
+            "items": {
+              "$ref": "#/definitions/ProviderConfigProperties"
+            },
+            "type": "array",
+            "x-ms-identifiers": []
+          }
         }
       }
     },
